<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MyCartActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/ordering_from"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="12dp"
        android:text="@string/Nils_store"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="50dp"
        android:background="@color/light_blue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/minus_image"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/image_back"
            android:src="@drawable/minus_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dressName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/dress_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/minus_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dressPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/dress_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/dressName"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-1dp"
        app:srcCompat="@drawable/placeorder" />

</RelativeLayout>