<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="3dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="42dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/image_back"
                    android:src="@drawable/minus_btn"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_name"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="90dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_price"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="48dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="42dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/image_back"
                    android:src="@drawable/minus_btn"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_name"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="90dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_price"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="48dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="42dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/image_back"
                    android:src="@drawable/minus_btn"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_name"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="90dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_price"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="48dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="42dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/image_back"
                    android:src="@drawable/minus_btn"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_name"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="90dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dress_price"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="48dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>